# slogger

./: LICENSE  README.md  pyproject.toml
examples/: division.py  echo_server.py
slogger/: __init__.py  formators.py  handlers.py  slogger.py
